# chrome-dinosaur-2d

./: .gitignore  CMakeLists.txt  Game.cpp
Dino/: DinoSprite.cpp
Graphics/: TextureManager.cpp  TextureManager.h
Obstacle/: ObstacleSprite.cpp
Text/: Text.cpp  Text.h
